Sleep dialog has black overlay.
Sleeping is not possible while afflicted by nightmares.
Stunt bonus can be received only after learning Malcom fell down the hole and there is no penalty for jumping more than once.
Sun Aloe can't be eaten.
Translated dialogs of CH, SH, SH_Oldworld dialogs and added addon skills to CH dialog.
Weed has no price field and makes NH cough funnily.

Following actions no longer cause unnecessary journal updates:
* Reading Cornelius' Diary, Xardas' Letter, Lucia's farewell letter, almanac in the secret library, Black Magician's Scroll, Diary of the novice black magician, "Pure mana" and "Pure health".
* Akil, Alvares, Kati and Randolph talked to while mercenaries threaten the farm.
* Alric asked to duel when he does not have his sword.
* Alrik, Karl, Lares, Brahim, Ignaz and Kardif talked about who can teach and sell things.
* Angar, Bennet, Diego, Gorn, Lee, Milten and Vatras told where the enemy is hiding.
* Dobar, Garond, Keroloth, Sengrath, Tandor talked about who can teach and sell things.
* Biff asked to work for NH.
* Bones asked to give bandit armor before receiving permission from Greg.
* Bones, Morgan and Henry talked to about who can teach what.
* Cipher told that the swamp dragon is dead.
* City Guard 310 talked to when NH was not allowed through the gate.
* Cord talked about joining mercenaries.
* Cronos asked whether he can sell equipment to NH.
* Gaan asked "How is the hunt?"
* Isgaroth, Pedro and Ulf telling the requirements of joining the monastery.
* Jorgen asked to become captain
* Lares asked what he knows about missing people.
* Lee talked to about joining mercenaries before talking to Onar.
* Lobart asked about clothing price after already offering cheapest price.
* Malak talked to about returning to Bengars farm.
* Mortis asked to help NH become stronger.
* Randolph requesting to bring him a remedy from Sagitta.
* Riordian and Saturas talked about William.
* Riordian asked about temple locations.